// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with caption 1`] = `
<div
  className="l3-style-menu-title"
>
  <label
    className="l3-style-menu-title__caption l3-style-menu-title__caption--bottom"
  >
    my title
  </label>
</div>
`;

exports[`renders correctly with custom class name 1`] = `
<div
  className="l3-style-menu-title dummy-class-name"
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  className="l3-style-menu-title"
/>
`;
